# dexter3.0

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PROJECT_STRUCTURE.md  README.md  START_SERVERS.sh
backend/: Cargo.toml  Cargo_simple.toml
backend/src/: alpha_strategies.rs  arbitrage_engine.rs  cross_chain.rs  dashboard_api.rs  dex_connectors.rs  external_apis.rs  flash_loan_simulator.rs  historical_data.rs  liquidity_pool.rs  liquidty_pool.rs  main.rs  main_simple.rs  market_data.rs  mev_protection.rs  ml_models.rs  risk_management.rs  smart_contracts.rs  trade_execution.rs  trade_executor.rs  universal_price_aggregator.rs  wallet_manager.rs  websocket_feeds.rs  ws_server.rs
docs/: CHANGELOG.md  README.md  UPDATE_SUMMARY.md
docs/api/: API_INTEGRATION_GUIDE.md  API_PERFORMANCE_ANALYSIS.md  COMPLETE_API_INTEGRATION_STATUS.md  EXCHANGE_API_STATUS.md  REAL_TIME_PRICES_IMPLEMENTATION.md
docs/deployment/: DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md
docs/guides/: WALLET_TRADING_INTEGRATION.md
frontend/: next.config.js  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: AlphaStrategies.tsx  ArbitrageExecutor.tsx  ArbitrageOpportunities.tsx  CoinPriceWidget.tsx  ConnectionStatus.tsx  CrossChainArbitrage.tsx  DataSourceStatus.tsx  ExchangePriceTicker.tsx  FlashLoanSimulator.tsx  LiveArbitrageWidget.tsx  LivePriceFeed.tsx  MarketDepthChart.tsx  MevProtectionMonitor.tsx  PlatformStats.tsx  ProTradingDashboard.tsx  RiskManagement.tsx  TradingDashboard.tsx  UniversalPriceDisplay.tsx  WalletConnection.tsx
frontend/src/app/hooks/: useMockWebSocket.ts  useWebSocket.ts  useWebSocketWithFallback.ts
