[package]
name = "dexter-arbitrage"
version = "3.0.0"
edition = "2021"
authors = ["DEXTER Team"]
description = "Advanced Multi-Platform DeFi Arbitrage & Analytics Platform"
license = "MIT"
repository = "https://github.com/your-org/dexter-arbitrage"
keywords = ["defi", "arbitrage", "solana", "ethereum", "blockchain"]
categories = ["finance", "cryptocurrency", "web-programming"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP & WebSocket for price feeds
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"

# WebSocket server for real-time streaming
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures-util = "0.3"

# Math & utilities
rust_decimal = { version = "1.32", features = ["serde-with-str"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# Additional dependencies for production features
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"
num-traits = "0.2"

# Database and caching
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Machine learning and analytics
ndarray = "0.15"
linfa = "0.7"
polars = { version = "0.35", features = ["lazy"] }

# Cross-chain support
ethers = "2.0"
web3 = "0.19"

# Cryptography and security
ring = "0.17"
jsonwebtoken = "9.0"

# For later Solana integration (add when ready)
# solana-client = "1.17"
# solana-sdk = "1.17"
# anchor-lang = "0.29.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"